# pyumann

./: .ExifTool_config  .gitignore  .pre-commit-config.yaml  GNUmakefile  README.md  config.yaml  coverage-baseline.yaml  pyproject.toml
.github/: copilot-instructions.md
data/tz/: tz.url
src/umann/: config.py
src/umann/geo/: __init__.py  tz4d.py
src/umann/metadata/: chk_datetime.py  chk_tz.py  et.py  memoize.py  metadata_tags.yaml
src/umann/utils/: data_utils.py  encoding_utils.py  fs_utils.py  trace_utils.py  yaml_utils.py
tests/: conftest.py
tests/fixtures/data/: kalaka.jpg.metadata.G1.yaml  kalaka.jpg.metadata.yaml
tests/integration/: conftest.py
tests/integration/umann/metadata/: test_chk_tz_integration.py  test_et_integration.py
tests/system/: conftest.py  test_cli_flow_system.py
tests/unit/: conftest.py
tests/unit/umann/geo/: test_geo_init.py  test_tz4d.py
tests/unit/umann/metadata/: test_chk_datetime.py  test_chk_tz.py  test_et.py
tests/unit/umann/utils/: test_data_utils.py  test_encoding_utils.py  test_fs_utils.py  test_simple_utils.py  test_trace_utils.py  test_yaml_utils.py
tests/utils/: __init__.py  coverage_guard.py
